# simd-bvh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README
src/: aabb.hpp  bvh2.cpp  bvh2.hpp  bvh4.cpp  bvh4.hpp  common.hpp  main.cpp  mesh.hpp  primitives.hpp  scene.cpp  scene.hpp  simd.hpp  tests.cpp  tests.hpp
